--- a/Session Information.html
+++ b/Session Information.html
@@ -26,7 +26,6 @@
                 <a href="index.html" class = "Other_Pages" >Home</a>
                 <a href="Session Information.html" class = "Current_Page">Session Informaton</a>
                 <a href="Booking.html" class = "Other_Pages">Booking</a>
-                <a href="Summer Camp Booking.html" class = "Other_Pages">Summer Camp Booking</a>
             </ul>
         </div>
         <div id="menu-icon" onclick="toggleMenu()">
@@ -35,43 +34,52 @@
             <div id="bar3"></div>
         </div>
     </nav>
-    <!-- 
-    <div style="width:100%; text-align: center; margin-left: auto; margin-right: auto;">
-      <input type="checkbox" id="toggle" class="toggleCheckbox" style="text-align: center;" />
-      <label for="toggle" class='toggleContainer' style="width:60%; text-align: center; margin-left: auto; margin-right: auto;">
-        <div>Online</div>   
-        <div>In person</div>
-      </label>
-    </div>
-  -->
+    <div style="padding: 20px; background-color: #f44336;color: white;">
+  <span style="margin-left: 15px; color: white; font-weight: bold; float: right;
+  font-size: 22px; line-height: 20px; cursor: pointer;", onMouseOver="this.style.color='black'", onMouseOut="this.style.color='white'", onclick="this.parentElement.style.display='none';">&times;</span> 
+  <strong>Attention!</strong> We Have No In Person Classes In The Summer
+  </div>
     <h1>Session Information</h1>
     <div id="info">
       <h2>Session Times <br></h2>
   <p style="font-size: xx-large;">
-  Monday:  4-5, 5-6, 6-7 7,8
+  Monday:  8AM - 4PM
   <br>
-    Tuesday:  4-5, 5-6, 6-7 7,8
+    Tuesday:  8AM - 4PM
     <br>
-      Wednesday: 4-5, 5-6, 6-7 7,8
+      Wednesday:  8AM - 4PM
       <br>
-        Thursday:  4-5, 5-6, 6-7 7,8 
+        Thursday:  8AM - 4PM
         <br>
-          Friday  4-5, 5-6, 6-7 7,8  
+          Friday:  8AM - 4PM
           <br>
-            Saturday: 10-11, 11-12, 12-1,  2-3, 4-5, 5-7
+            Saturday:  8AM - 4PM
             <br>
-              Sunday: 10-11, 11-12, 12-1,  2-3, 4-5, 5-7
+              Sunday:  8AM - 4PM
               <br>
             </p>
-      <h2>Pricing</h2>
+      <h2>Pricing </h2>
+      <h3>Pricing for 1 Class</h3>
       <p style="font-size: xx-large;">
-        Arduino Course - 30$ For In Person Sessions and 20$ online
+        Arduino Course - 50$ For In Person Sessions and 40$ online
         <br>
-        Python Course - 30$ For In Person Sessions and 20$ online
+        Python Course - 40$ For In Person Sessions and 30$ online 
         <br>
-        Scratch Course - 30$ For In Person Sessions and 20$ online
+        Scratch Course - 40$ For In Person Sessions and 30$ online
         <br>
-        For online sessions you will need your own components we can give you amazon links for the components you need
+        For online sessions you will need your own components we can give you  links for the components you need
+        <br>
+      </p>
+      <h3>Pricing for 4 Class Bundle</h3>
+      <p style="font-size: xx-large;">
+        Arduino Course - 175$ For In Person Sessions and 140$ online
+        <br>
+        Python Course - 140$ For In Person Sessions and 100$ online 
+        <br>
+        Scratch Course - 140$ For In Person Sessions and 100$ online
+        <br>
+        For online sessions you will need your own components we can give you  links for the components you need
+        <br>
       </p>
       <h2>Extra Information</h2>
       <p style="font-size: xx-large;">
@@ -93,6 +101,15 @@
    <div class="footer">
        <span>Broadlands, VA</span> - <a href="tel:+15714642577" >(571) 464 2577</a> - <a href="mailto:contact@makearobot.xyz">contact@makearobot.xyz</a>
     </div>      
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECECESP3N4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-ECECESP3N4');
+    </script>
     <script src="basic.js"> </script> 
 </body>
 </html>
