--- a/account.html
+++ b/account.html
@@ -73,10 +73,7 @@
             <ul class="menu-links" id="menuLinks">
                 <a href="index.html" class = "Current_Page" >Home</a>
                 <a href="Session Information.html" class = "Other_Pages">Session Informaton</a>
-                <a href="Booking.html" class = "Other_Pages">Booking</a>
-                <a href="Summer Camp Booking.html" class = "Other_Pages">Summer Camp Booking</a>
-                <a href="Contact Us.html" class = "Other_Pages">Contact Us</a>
-                <a href="About Us.html" class = "Other_Pages">About Us</a>
+                <a href="Booking.html" class = "Other_Pages">Booking</a>\
             </ul>
         </div>
         <div id="menu-icon" onclick="toggleMenu()">
